--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,9 +31,7 @@ services:
     container_name: auth
     ports:
       - "8080:8080"
-      - "5841:5841"
-    # volumes:
-    #   - ./backend/auth:/app
+      - "5841:5841" 
     networks:
       - elk
     environment:
@@ -79,8 +77,7 @@ services:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.16.6
     environment:
       - discovery.type=single-node
-      - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
-      - xpack.security.enabled=false
+      - xpack.security.enabled=false # temporary for development
     ports:
       - "9200:9200"
     networks:
@@ -149,6 +146,7 @@ services:
       - AUTH_URL=${AUTH_URL}
       - AUTH_REDIRECT_URL=${AUTH_REDIRECT_URL}
       - GATEWAY_SECRET=${GATEWAY_SECRET}
+      - FRONTEND_DOMAIN=${FRONTEND_DOMAIN}
     depends_on:
       auth:
         condition: service_started
