--- a/gateway/package.json
+++ b/gateway/package.json
@@ -16,6 +16,7 @@
 		"@types/express": "^4.17.22",
 		"@types/express-serve-static-core": "^4.19.6",
 		"body-parser": "^2.2.0",
+		"cookie-parser": "^1.4.7",
 		"cors": "^2.8.5",
 		"express": "^4.21.2",
 		"graphql": "^16.11.0",
@@ -23,6 +24,7 @@
 		"zod": "^3.25.42"
 	},
 	"devDependencies": {
+		"@types/cookie-parser": "^1.4.9",
 		"@types/cors": "^2.8.18",
 		"nodemon": "^3.1.10",
 		"ts-node": "^10.9.2",
